# mlops_soloproject

./: Makefile  README.md  model.pt  pyproject.toml  requirements.txt  trainer.dockerfile
.github/workflows/: tests.yml
data/: make_dataset.py
data/processed/: test_labels.pt  train_labels.pt
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
mlops_soloproject/: __init__.py
models/: main.py  model.py  train_model.py
tests/: __init__.py  test_data.py  test_model.py  test_training.py
